# voice-detect.cpp

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/: RESULTS.md
benchmarks/demo/: honest_measure.json  make_plots.py  measure_peak_rss.py  measure_verify_rss.py  measure_voice.py  spec.json  voice_bench_plot.py  voice_race.py
docs/: benchmarks.md  conversion.md  cpu-optimization.md  parity.md  quantization.md
examples/cli/: CMakeLists.txt  main.cpp
include/: voicedetect.h  voicedetect_capi.h
models/: MANIFEST.md  ecapa_tdnn_manifest.txt
scripts/: apply_ggml_patches.sh  bench_compare.py  convert_voicedetect_to_gguf.py  gen_baseline.py  gpu_verify.sh  requirements.txt  trace_ecapa.py
src/: analyze_w2v2.cpp  analyze_w2v2.hpp  audio_io.cpp  audio_io.hpp  backend.cpp  backend.hpp  common.hpp  directconv.cpp  directconv.hpp  encoder.cpp  encoder.hpp  encoder_campplus.cpp  encoder_eres2net.cpp  encoder_resnet.cpp  fbank.cpp  fbank.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  voicedetect.cpp  voicedetect_capi.cpp  winograd.cpp  winograd.hpp
tests/: CMakeLists.txt  bench_eres2net.cpp  bench_wespeaker.cpp  parity.hpp  test_age_gender.cpp  test_analyze.cpp  test_blocked.cpp  test_cache_safety.cpp  test_embed.cpp  test_encoder.cpp  test_fbank.cpp  test_smoke.cpp  test_verify.cpp
tests/fixtures/: README.md  pairs.json
tests/python/: check_baseline.py  check_convert.py  check_manifest.py
